<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">NotePad</string>
    <string name="live_folder_name">Notes</string>

    <string name="title_edit_title">笔记标题:</string>
    <string name="title_create">笔记新建</string>
    <string name="title_edit">笔记编辑</string>
    <string name="title_hint">请输入标题</string>
    <string name="undefined_title">&lt;未定义&gt;</string>
    <string name="title_notes_list">个人记事本</string>

    <string name="menu_add">新建笔记</string>
    <string name="menu_save">保存</string>
    <string name="menu_delete">删除</string>
    <string name="menu_open">打开笔记</string>
    <string name="menu_back">返回</string>
    <string name="menu_copy">复制</string>
    <string name="menu_paste">粘贴</string>

    <string name="button_ok">OK</string>
    <string name="text_title">Title:</string>

    <string name="resolve_edit">Edit note</string>
    <string name="resolve_title">标题编辑</string>

    <string name="error_title">Error</string>
    <string name="error_message">Error loading note</string>
    <string name="nothing_to_save">There is nothing to save</string>

    <string name="menu_search">搜索</string>
    <string name="search_hint">搜索笔记</string>
    <string name="search_button">搜索</string>
    <string name="no_notes">暂无笔记</string>

    <string name="search_mode_real_time">实时搜索</string>
    <string name="search_mode_click">点击搜索</string>
    <string name="cancel">取消</string>

    <string name="change_background">更换背景</string>
    <string name="title_change_bg">更改背景颜色</string>
    <string name="color_white">白色</string>
    <string name="color_green">绿色</string>
    <string name="color_blue">蓝色</string>
    <string name="color_yellow">黄色</string>
    <string name="color_pink">粉色</string>

    <!-- 颜色方块的屏幕阅读器描述 -->
    <string name="color_white_desc">白色背景</string>
    <string name="color_green_desc">绿色背景</string>
    <string name="color_blue_desc">蓝色背景</string>
    <string name="color_yellow_desc">黄色背景</string>
    <string name="color_pink_desc">粉色背景</string>

</resources>